# BBSIA

./: .env.example  .gitignore  BBSIA_Auditoria_Tecnica.html  CONFORMIDADE.md  LICENSE  Makefile  PLANO_MODULARIZACAO_FASE3.md  README.md  api.py  api_core.py  apply_api.py  apply_js.py  apply_rag.py  catalogo_solucoes.py  chunking.py  classificador_artigo.py  config.py  embedding.py  extrator_pdf_v2.py  faithfulness.py  generator.py  migrate_qdrant.py  migrate_retriever.py  old_plano_v1.md  pipeline.py  plano_metadados_biblioteca.md  pyproject.toml  query_planning.py  rag_engine.py  reprocess_worker.py  requirements.txt  reranker.py  retriever.py  split_rag.py  test_docling.py  vector_store.py
RPI/: DESIGN.md  SPEC.md  TASKS.md  diagnostico_rag_chatbot_semantico.md
benchmarks/: benchmark.py  generate_eval.py  rag_benchmark.py
catalogo/: solucoes_piloto.json
config/: categorias.yaml
docs/: ARQUITETURA_RAG.md  AVALIACAO_RAG.md  Dataset NICE.xlsx  PLANO_BENCHMARK_RAG_FASE3.md  PLANO_MODULARIZACAO_FASE3.md  REQUISITOS_PROJETO_BBSIA.html  VERSIONAMENTO_DADOS.md  plano_chatbot_rag_bbsia.md  prompt_api_bbsia.md
documentation/: api-reference.md  backend-bbsia.md  operacao-local.md
routers/: admin.py  biblioteca.py  rag.py  system.py
schemas/: solucao_piloto.schema.json
scratch/: patch_retriever.py
scripts/: calibrar_threshold.py  chat_bbsia.py  dev.ps1  diagnosticar_qdrant.py  gerar_embeddings_solucoes.py  perguntar_docs.py  resultados_calibracao.json
tests/: test_api.py  test_catalogo_solucoes.py  test_classificador.py  test_diagnostic_prompt.py  (+10 more)
web/: app.js  (+2 more)
(+58 files in other folders)
