[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "bbsia-rag"
version = "0.1.0"
description = "Chatbot RAG local do Banco Brasileiro de Solucoes de IA (BBSIA)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pymupdf>=1.27.0",
  "sentence-transformers>=3.0.0",
  "numpy>=1.26.0",
  "requests>=2.31.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "python-multipart>=0.0.9",
  "jsonschema>=4.22.0",
  "httpx>=0.27.0",
  "prometheus-fastapi-instrumentator>=6.1.0",
  "docling>=1.0.0",
  "pyyaml>=6.0.0",
  "qdrant-client>=1.9.0",
  "pillow>=10.0.0",
  "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "respx>=0.21.1",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py310"
include = ["*.py", "scripts/*.py", "tests/*.py"]
exclude = [".venv", "data", "uploads", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
pretty = true
exclude = "^(data|uploads|\\.venv)/"
